migrate to aidemos, change paths to /nds/, fix absolute calls

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,28 +9,28 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
+    <link rel="shortcut icon" href="static/images/favicon.ico">
 
     <!--Bootstrap Css-->
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" />
 
     <!-- Materialdesign icons Css -->
-    <link href="/static/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="static/css/materialdesignicons.min.css" rel="stylesheet">
 
     <!-- Mobirise icons Css -->
-    <link href="/static/css/mobiriseicons.css" rel="stylesheet">
+    <link href="static/css/mobiriseicons.css" rel="stylesheet"> 
 
     <!-- Magnific-popup -->
-    <link rel="stylesheet" href="/static/css/magnific-popup.css">
+    <link rel="stylesheet" href="static/css/magnific-popup.css">
 
     <!-- OWL SLIDER -->
-    <link rel="stylesheet" href="/static/css/owl.carousel.css" />
-    <link rel="stylesheet" href="/static/css/owl.theme.css" />
-    <link rel="stylesheet" href="/static/css/owl.transitions.css" />
+    <link rel="stylesheet" href="static/css/owl.carousel.css" />
+    <link rel="stylesheet" href="static/css/owl.theme.css" />
+    <link rel="stylesheet" href="static/css/owl.transitions.css" />
 
     <!-- Custom style Css -->
-    <link href="/static/css/style.css" rel="stylesheet">
-    <link href="/static/css/color/blue.css" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
+    <link href="static/css/color/blue.css" rel="stylesheet">
     {% endblock %}
 </head>
 
@@ -40,32 +40,32 @@
     <!-- Back To Top -->
     <a href="#" class="back_top"> <i class="mdi mdi-chevron-up"> </i> </a>
     <!-- JAVASCRIPTS -->
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/popper.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/js/popper.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
     <!--EASING JS-->
-    <script src="/static/js/jquery.easing.min.js"></script>
-    <script src="/static/js/scrollspy.min.js"></script>
+    <script src="static/js/jquery.easing.min.js"></script>
+    <script src="static/js/scrollspy.min.js"></script>
     <!--PORTFOLIO FILTER JS-->
-    <script src="/static/js/isotope.js"></script>
+    <script src="static/js/isotope.js"></script>
     <!-- Magnific Popup Js -->
-    <script src="/static/js/jquery.magnific-popup.min.js"></script>
+    <script src="static/js/jquery.magnific-popup.min.js"></script>
     <!-- TYPED -->
-    <script src="/static/js/typed.js"></script>
+    <script src="static/js/typed.js"></script>
     <!--PARTICLES ANIMATE JS-->
-    <script src="/static/js/particles.js"></script>
-    <script src="/static/js/particles.app.js"></script>
+    <script src="static/js/particles.js"></script>
+    <script src="static/js/particles.app.js"></script>
     <!-- OWL CAROUSEL -->
-    <script src="/static/js/owl.carousel.min.js"></script>
+    <script src="static/js/owl.carousel.min.js"></script>
     <!--CUSTOM JS-->
-    <script src="/static/js/custom.js"></script>
+    <script src="static/js/custom.js"></script>
     <!--CUSTOM UPLOAD/DOWNLOAD JS-->
-    <script src="/static/js/upload.js"></script>
+    <script src="static/js/upload.js"></script>
     <!--D3.js-->
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <!--CUSTOM FORCE DIRECTED D3 GRAPH JS-->
-    <script src="/static/js/graph.js"></script>
+    <script src="static/js/graph.js"></script>
 </body>
 
 </html>
