--- a/templates/demo.html
+++ b/templates/demo.html
@@ -16,8 +16,8 @@
     <div class="container">
 
         <a class="navbar-brand pt-0 logo" href="index.html">
-            <img src="/static/images/logo-dark.png" alt="" class="img-fluid logo-light">
-            <img src="/static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
+            <img src="static/images/logo-dark.png" alt="" class="img-fluid logo-light">
+            <img src="static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -121,8 +121,8 @@
                         <br>
                         <br>
                         <div class="text-center col-lg-12">
-                            <img src="/static/images/uoft.png" style="width: 15%;"></img>
-                            <img src="/static/images/vector.png" style="width: 15%;"></img>
+                            <img src="static/images/uoft.png" style="width: 15%;"></img>
+                            <img src="static/images/vector.png" style="width: 15%;"></img>
                         </div>
                         <br>
                         <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
