--- a/templates/paper.html
+++ b/templates/paper.html
@@ -16,8 +16,8 @@
     <div class="container">
 
         <a class="navbar-brand pt-0 logo" href="index.html">
-            <img src="/static/images/logo-dark.png" alt="" class="img-fluid logo-light">
-            <img src="/static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
+            <img src="static/images/logo-dark.png" alt="" class="img-fluid logo-light">
+            <img src="static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -101,7 +101,7 @@
                     <br>
                     <br>
                     <div class="mt-3 text-center">
-                        <img src="/static/images/server-client.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="static/images/server-client.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                     <br>
                     <br>
@@ -176,7 +176,7 @@
                     <!-- <div class="text-center testi_boxes mx-auto"> -->
                     <div class="col-sm">
                         <div>
-                            <img src="/static/images/team/xi_yan.jpg" alt=""
+                            <img src="static/images/team/xi_yan.jpg" alt=""
                                 class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="180px"
                                 height="180px">
                         </div>
@@ -187,7 +187,7 @@
                     <div class="col-sm">
                         <div>
                             <a href="http://www.cs.toronto.edu/~davidj/" target="_blank">
-                                <img src="/static/images/team/david_acuna.jpg" alt=""
+                                <img src="static/images/team/david_acuna.jpg" alt=""
                                     class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="180px"
                                     height="180px"></a>
                         </div>
@@ -198,7 +198,7 @@
                     <div class="col-sm">
                         <div>
                             <a href="https://www.cs.utoronto.ca/~fidler/" target="_blank">
-                                <img src="/static/images/team/sanja.png" alt=""
+                                <img src="static/images/team/sanja.png" alt=""
                                     class="mx-auto img-thumbnail img-fluid d-block rounded-circle" width="180px"
                                     height="180px">
                             </a>
@@ -241,8 +241,8 @@
                         <br>
                         <br>
                         <div class="text-center col-lg-12">
-                            <img src="/static/images/uoft.png" style="width: 15%;"></img>
-                            <img src="/static/images/vector.png" style="width: 15%;"></img>
+                            <img src="static/images/uoft.png" style="width: 15%;"></img>
+                            <img src="static/images/vector.png" style="width: 15%;"></img>
                         </div>
                         <br>
                         <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
