--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -16,8 +16,8 @@
     <div class="container">
 
         <a class="navbar-brand pt-0 logo" href="index.html">
-            <img src="/static/images/logo-dark.png" alt="" class="img-fluid logo-light">
-            <img src="/static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
+            <img src="static/images/logo-dark.png" alt="" class="img-fluid logo-light">
+            <img src="static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
