--- a/templates/style.html
+++ b/templates/style.html
@@ -307,7 +307,7 @@
     =============================*/
 
     .header-bg-img {
-        background-image: url(/static/images/header-bg.jpg);
+        background-image: url(static/images/header-bg.jpg);
         position: relative;
         background-size: cover;
         background-position: center center;
