--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
     <div class="container">
 
         <a class="navbar-brand pt-0 logo" href="#">
-            <img src="/static/images/logo.png" alt="" class="img-fluid logo-light">
-            <img src="/static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
+            <img src="static/images/logo.png" alt="" class="img-fluid logo-light">
+            <img src="static/images/logo-dark.png" alt="" class="img-fluid logo-dark">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -152,7 +152,7 @@
                 </div>
                 <div class="mt-3 text-center">
                     <video width="400" controls>
-                        <source src="/static/images/DNSINTROFINALFINAL.mp4" type="video/mp4">
+                        <source src="static/images/DNSINTROFINALFINAL.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <br>
@@ -194,7 +194,7 @@
                 <div class="img-fluid">
                     <div class="work_box">
                         <div class="work_img">
-                            <img src="/static/images/works/2-openimages.jpg" class="img-fluid mx-auto d-block rounded"
+                            <img src="static/images/works/2-openimages.jpg" class="img-fluid mx-auto d-block rounded"
                                 alt="work-img">
                         </div>
                         <div class="work_detail">
@@ -221,7 +221,7 @@
                 <div class="img-fluid">
                     <div class="work_box">
                         <div class="work_img">
-                            <img src="/static/images/works/1-coco.jpg" class="img-fluid mx-auto d-block rounded"
+                            <img src="static/images/works/1-coco.jpg" class="img-fluid mx-auto d-block rounded"
                                 alt="work-img">
                         </div>
                         <div class="work_detail">
@@ -243,7 +243,7 @@
                 <div class="img-fluid">
                     <div class="work_box">
                         <div class="work_img">
-                            <img src="/static/images/works/3-imagenet.jpg" class="img-fluid mx-auto d-block rounded"
+                            <img src="static/images/works/3-imagenet.jpg" class="img-fluid mx-auto d-block rounded"
                                 alt="work-img">
                         </div>
                         <div class="work_detail">
@@ -337,7 +337,7 @@
                             <div class="col-lg-12">
                                 <div class="form-group mt-2">
                                     <label for="select-dataset">Budget (Number of Images)</label>
-                                    <input type="number" , class="form-control" , id="budget" , placeholder="1000">
+                                    <input type="number" , class="form-control" , id="budget" , placeholder="1000", value="1000">
                                 </div>
                             </div>
                         </div>
@@ -426,8 +426,8 @@
                     <br>
                     <br>
                     <div class="text-center col-lg-12">
-                        <img src="/static/images/uoft.png" style="width: 15%;"></img>
-                        <img src="/static/images/vector.png" style="width: 15%;"></img>
+                        <img src="static/images/uoft.png" style="width: 15%;"></img>
+                        <img src="static/images/vector.png" style="width: 15%;"></img>
                     </div>
                     <br>
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
