--- a/templates/index.html
+++ b/templates/index.html
@@ -337,7 +337,7 @@
                             <div class="col-lg-12">
                                 <div class="form-group mt-2">
                                     <label for="select-dataset">Budget (Number of Images)</label>
-                                    <input type="number" , class="form-control" , id="budget" , placeholder="1000">
+                                    <input type="number" , class="form-control" , id="budget" , placeholder="1000" value="1000">
                                 </div>
                             </div>
                         </div>
